--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,7 @@
 body
 {
-    color: white;
-    background-color: rgb(2, 10, 28);
+    color: rgb(174, 166, 162);
+    background-color: rgb(145, 146, 148);
     font-family: serif;
 }
 
@@ -100,7 +100,7 @@ body
 }
 #canvas-figura
 {
-    background-color: #000000;
+    background-color: #cac9c9;
     border-color: #131831;
     border-style: solid;
     border-width: 1px;
